Put definitions in <details>

--- a/src/index.html
+++ b/src/index.html
@@ -677,37 +677,75 @@
                     In case you are wondering what all of these terms mean, here are some of their definitions so we have a better understanding of the results.
                 </p>
 
-                <h5>Definitions:</h5>
-                <ul>
-                    <li>
-                        <h4>CAGR:</h4>
-                        The Compound Annual Growth Rate (CAGR) is a financial metric that measures the annual growth rate of an investment or portfolio over a specified period, assuming the returns are reinvested (compounded) each year. It provides a smoothed, annualized return that reflects the growth as if it occurred at a steady rate, making it useful for comparing the performance of different investments or strategies. It’s ideal for summarizing long-term performance. The S&P 500 has a historical CAGR of ~10% per year.
-                    </li>
-                    <li>
-                        <h4>Sortino:</h4>
-                        The Sortino ratio is a financial metric used to evaluate the risk-adjusted return of an investment or trading strategy, similar to the Sharpe ratio, but with a key difference: it focuses only on downside risk (negative returns or losses) rather than total volatility. This makes it particularly relevant for highlighting how well a strategy manages unfavorable outcomes, which is critical in volatile markets like cryptocurrencies. A higher Sortino ratio indicates better risk-adjusted returns relative to downside risk.
-                    </li>
-                    <li>
-                        <h4>Sharpe:</h4>
-                        The Sharpe ratio is a financial metric used to measure the risk-adjusted return of an investment or trading strategy. It shows how much return an investment generates per unit of risk taken, helping compare strategies or portfolios by accounting for volatility.
-                    </li>
-                    <li>
-                        <h4>Calmar:</h4>
-                        The Calmar ratio is a financial metric used to evaluate the risk-adjusted return of an investment or trading strategy by comparing its annualized return to its maximum drawdown (the largest peak-to-trough decline in portfolio value). It highlights how well a strategy delivers returns relative to the worst-case loss. A higher Calmar ratio indicates better returns per unit of maximum loss.
-                    </li>
-                    <li>
-                        <h4>SQN:</h4>
-                        The SQN (System Quality Number) is a performance metric developed by Dr. Van K. Tharp to evaluate the quality of a trading system or strategy by measuring the consistency and profitability of its returns relative to the variability of those returns. SQN evaluates how predictable and reliable a trading system’s returns are. A high SQN indicates consistent profits with low variability. Negative SQN values suggest a losing strategy.
-                    </li>
-                    <li>
-                        <h4>Profit Factor:</h4>
-                        The Profit Factor is a performance metric that measures the efficiency of a trading strategy by comparing the total gross profits from winning trades to the total gross losses from losing trades. It indicates how many times the profits cover the losses, providing a clear view of the strategy’s ability to generate gains relative to its risks.
-                    </li>
-                    <li>
-                        <h4>Expectancy (ratio):</h4>
-                        The Expectancy Ratio is a metric that measures the average expected profit per trade relative to the risk taken in each trade, expressed as a multiple of the risk (often denoted as "R"). It’s derived from the Expectancy, which quantifies the average dollar amount you expect to gain (or lose) per trade based on your strategy’s win rate, average win, and average loss. The Expectancy Ratio provides a normalized view of profitability per unit of risk, making it useful for evaluating the efficiency of a trading strategy. A high ratio indicates effective risk management, as losses are minimized while gains are maximized.
-                    </li>
-                </ul>
+                <h5>Definitions</h5>
+                <div class="details-container">
+                    <ul>
+                        <li>
+                            <details>
+                                <!-- <summary><h4>CAGR:</h4></summary> -->
+                                <summary>CAGR:</summary>
+                                <p>
+                                    The Compound Annual Growth Rate (CAGR) is a financial metric that measures the annual growth rate of an investment or portfolio over a specified period, assuming the returns are reinvested (compounded) each year. It provides a smoothed, annualized return that reflects the growth as if it occurred at a steady rate, making it useful for comparing the performance of different investments or strategies. It’s ideal for summarizing long-term performance. The S&P 500 has a historical CAGR of ~10% per year.
+                                </p>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <!-- <summary><h4>Sortino:</h4></summary> -->
+                                <summary>Sortino:</summary>
+                                <p>
+                                    The Sortino ratio is a financial metric used to evaluate the risk-adjusted return of an investment or trading strategy, similar to the Sharpe ratio, but with a key difference: it focuses only on downside risk (negative returns or losses) rather than total volatility. This makes it particularly relevant for highlighting how well a strategy manages unfavorable outcomes, which is critical in volatile markets like cryptocurrencies. A higher Sortino ratio indicates better risk-adjusted returns relative to downside risk.
+                                </p>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <!-- <summary><h4>Sharpe:</h4></summary> -->
+                                <summary>Sharpe:</summary>
+                                <p>
+                                    The Sharpe ratio is a financial metric used to measure the risk-adjusted return of an investment or trading strategy. It shows how much return an investment generates per unit of risk taken, helping compare strategies or portfolios by accounting for volatility.
+                                </p>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <!-- <summary><h4>Calmar:</h4></summary> -->
+                                <summary>Calmar:</summary>
+                                <p>
+                                    The Calmar ratio is a financial metric used to evaluate the risk-adjusted return of an investment or trading strategy by comparing its annualized return to its maximum drawdown (the largest peak-to-trough decline in portfolio value). It highlights how well a strategy delivers returns relative to the worst-case loss. A higher Calmar ratio indicates better returns per unit of maximum loss.
+                                </p>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <!-- <summary><h4>SQN:</h4></summary> -->
+                                <!-- <summary>SQN:</summary> -->
+                                <p>
+                                    The SQN (System Quality Number) is a performance metric developed by Dr. Van K. Tharp to evaluate the quality of a trading system or strategy by measuring the consistency and profitability of its returns relative to the variability of those returns. SQN evaluates how predictable and reliable a trading system’s returns are. A high SQN indicates consistent profits with low variability. Negative SQN values suggest a losing strategy.
+                                </p>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <!-- <summary><h4>Profit Factor:</h4></summary> -->
+                                <summary>Profit Factor:</summary>
+                                <p>
+                                    The Profit Factor is a performance metric that measures the efficiency of a trading strategy by comparing the total gross profits from winning trades to the total gross losses from losing trades. It indicates how many times the profits cover the losses, providing a clear view of the strategy’s ability to generate gains relative to its risks.
+                                </p>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <!-- <summary><h4>Expectancy (ratio):</h4></summary> -->
+                                <summary>Expectancy (ratio):</summary>
+                                <p>
+                                    The Expectancy Ratio is a metric that measures the average expected profit per trade relative to the risk taken in each trade, expressed as a multiple of the risk (often denoted as "R"). It’s derived from the Expectancy, which quantifies the average dollar amount you expect to gain (or lose) per trade based on your strategy’s win rate, average win, and average loss. The Expectancy Ratio provides a normalized view of profitability per unit of risk, making it useful for evaluating the efficiency of a trading strategy. A high ratio indicates effective risk management, as losses are minimized while gains are maximized.
+                                </p>
+                            </details>
+                        </li>
+                    </ul>
+                </div>
+
 
                 <h5>Backtesting Period:</h5>
                 <p>
