Fixed summary title

--- a/src/index.html
+++ b/src/index.html
@@ -719,7 +719,7 @@
                         <li>
                             <details>
                                 <!-- <summary><h4>SQN:</h4></summary> -->
-                                <!-- <summary>SQN:</summary> -->
+                                <summary>SQN:</summary>
                                 <p>
                                     The SQN (System Quality Number) is a performance metric developed by Dr. Van K. Tharp to evaluate the quality of a trading system or strategy by measuring the consistency and profitability of its returns relative to the variability of those returns. SQN evaluates how predictable and reliable a trading system’s returns are. A high SQN indicates consistent profits with low variability. Negative SQN values suggest a losing strategy.
                                 </p>
