Updated header title

--- a/src/index.html
+++ b/src/index.html
@@ -365,7 +365,7 @@
                     <li>Clang </li>
                 </ul>
 
-                <h5>What are <a href="https://www.ncqa.org/hedis/" target="_blank" rel="noopener noreferrer">HEDIS</a> measures?</h5>
+                <h5>Background Information: What are <a href="https://www.ncqa.org/hedis/" target="_blank" rel="noopener noreferrer">HEDIS</a> measures?</h5>
                 <p>
                     HEDIS measures are a set of standardized metrics used to evaluate the quality of healthcare services. They are used by healthcare organizations to monitor and improve the quality of care they provide. It is a gold standard in healthcare performance measurement, used by over 90% of health plans in the US.
                 </p>
