--- a/src/index.html
+++ b/src/index.html
@@ -110,21 +110,15 @@
             <li><a href="#hero">Welcome</a></li>
             <li><a href="#about_me">About Me</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a>
-               <ul>
-                   <li><a href="#centene">Centene</a></li>
-                   <li><a href="#epsilon_systems">Epsilon Systems</a></li>
-               </ul>
-            </li>
-            <li><a href="#projects">Projects</a>
-                <ul>
-                    <li><a href="#crypto_trading_bot">Cryptocurrency Trading Bot</a></li>
-                    <li><a href="#ps5_purchasing_bot">PS5 Purchasing Bot</a></li>
-                    <li><a href="#this_website">This Website</a></li>
-                    <li><a href="#research_project_search_and_seizure">Search + Seizure</a></li>
-                    <li><a href="#research_project_network_traffic_analysis">Network Traffic Analysis</a></li>
-                </ul>
-            </li>
+            <li><a href="#experience">Experience</a></li>
+                <li class="indent"><a href="#centene">Centene</a></li>
+                <li class="indent"><a href="#epsilon_systems">Epsilon Systems</a></li>
+            <li><a href="#projects">Projects</a></li>
+                <li class="indent"><a href="#crypto_trading_bot">Cryptocurrency Trading Bot</a></li>
+                <li class="indent"><a href="#ps5_purchasing_bot">PS5 Purchasing Bot</a></li>
+                <li class="indent"><a href="#this_website">This Website</a></li>
+                <li class="indent"><a href="#research_project_search_and_seizure">Search + Seizure</a></li>
+                <li class="indent"><a href="#research_project_network_traffic_analysis">Network Traffic Analysis</a></li>
             <li><a href="#footer">Contact</a></li>
         </ul>
     </nav>
